//
//  AccessibilityIdentifier.swift
//  ExampleMVVM
//
//        on 08.01.20.
//

import Foundation

public struct AccessibilityIdentifier {
    static let movieDetailsView = "AccessibilityIdentifierMovieDetailsView"
    static let searchField = "AccessibilityIdentifierSearchMovies"
}
